@@ -1,3 +1,9 @@
+2001-03-20  Frank Warmerdam  <warmerdam@pobox.com>
+
+	* apps/gdal_translate.c: fixes from Mark Salazar.
+	Added '%' for -outsize switch, fixed completion reporting, fixed
+	adGeoTransform[] calculation.
+
 2001-03-18  Frank Warmerdam  <warmerdam@pobox.com>
 
 	* ogr/ogrsf_frmts/dgn: removed requirement for .dgn extention.
